--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body,
 html {
-	font-size: 20px;
+	font-size: 14px;
 	margin: 5%;
-	background-color: #f0f0f0;
+	background-color: #white;
 }
 
 .photo-rest figcaption {
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Vollkorn', serif;
 	text-align: center;
 	font-size: 10px;
 	padding: 10px;
@@ -14,15 +14,15 @@ html {
 
 h1 {
 	text-align: center;
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
-	color: #cb181d; 
-	text-shadow: -1px 0 #252525, 0 1px #252525, 1px 0 #252525, 0 -1px #252525;
+	color: #c2e699; 
+	text-shadow: -1.5px 0 #006837, 0 1.5px #006837, 1.5px 0 #006837, 0 -1.5px #006837;
 }
 
 h6 {
 	text-align: center;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Vollkorn', serif;
 	font-size: 16px;
 	padding-top: 0px;
 }
@@ -30,7 +30,7 @@ h6 {
 
 p {
 	padding: 8px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Vollkorn', serif;
 }
 
 h4 {
@@ -62,7 +62,7 @@ h4 {
 	margin: 4px;
 	margin-bottom: 20px;
 	padding: 20px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Vollkorn', serif;
 	font-size: 17px;
 	max-width: 100%;
   height: auto;
@@ -87,7 +87,7 @@ h4 {
   margin: 4px;
   margin-bottom: 5px;
   padding: 5px;
-  background-color: #67000d;
+  background-color: #ce1256;
   color: white;
   font-size: 12px;
   line-height: 10px;
@@ -106,7 +106,7 @@ html {
 }
 
 .photo-rest figcaption {
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Vollkorn', serif;
 	text-align: center;
 	font-size: 13px;
 	padding: 10px;
@@ -127,6 +127,7 @@ p {
   display: table;
 	margin: 0 auto;
 }
+	
 	.text-area {
 		font-size: 22px;
 	}
@@ -155,7 +156,6 @@ p {
 .footer {
 	font-size: 15px;
 }
-
 
 }
 
